--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clipToPadding="false"
+    android:paddingBottom="100dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -17,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="Welcome to the Momspresso Rewards!"
+            android:text="@string/rewards_welcome"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:fontName="oswald_regular.ttf" />
@@ -30,7 +32,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="Leading brands host campaigns in the form of surveys, e-commerce reviews, sponsored blogs and others on a regular basis. We need some information from you to determine your eligibility for these campaigns. Participation in these campaigns involves a monetary benefit and hence Momspresso Rewards."
+            android:text="@string/rewards_description"
             android:textSize="14sp"
             app:fontName="oswald_regular.ttf" />
 
@@ -59,10 +61,10 @@
             android:paddingTop="10dp"
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
-            android:text="START NOW"
+            android:text="@string/rewards_start_now"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:fontName="oswald_regular.ttf" />
 
     </RelativeLayout>
-</RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
