--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
@@ -20,15 +20,15 @@
             <com.mycity4kids.widget.CustomFontTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="20dp"
-                android:text="We need this information to determine the eligibility for a compaign"
-                android:gravity="center"
-                android:layout_marginLeft="20dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
+                android:text="@string/rewards_family_header"
                 android:textColor="@color/app_grey"
                 android:textSize="14sp"
-                android:layout_marginRight="20dp"
                 app:fontName="oswald.ttf" />
 
 
@@ -44,7 +44,7 @@
                     android:id="@+id/gender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_settings.edit_profile.gender"
+                    android:text="@string/rewards_gender"
                     android:textColor="@color/app_grey"
                     app:fontName="oswald_regular.ttf"
                     app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
                     android:id="@+id/dobLabelTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/dob"
+                    android:text="@string/rewards_dob"
                     android:textColor="@color/app_grey"
                     app:fontName="oswald_regular.ttf"
                     app:layout_constraintLeft_toLeftOf="@+id/textDOB"
@@ -109,7 +109,7 @@
                     android:id="@+id/textWorkingStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="WORKING STATUS"
+                    android:text="@string/rewards_working_status"
                     android:textColor="@color/app_grey"
                     app:fontName="oswald_regular.ttf" />
 
@@ -132,7 +132,7 @@
                         android:layout_marginStart="0dp"
                         android:layout_marginLeft="0dp"
                         android:buttonTint="@color/app_red"
-                        android:text="@string/working"
+                        android:text="@string/rewards_working"
                         android:textColor="@color/app_light_black" />
 
                     <android.support.v7.widget.AppCompatRadioButton
@@ -143,7 +143,7 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="8dp"
                         android:buttonTint="@color/app_red"
-                        android:text="@string/not_working"
+                        android:text="@string/rewards_non_working"
                         android:textColor="@color/app_light_black" />
                 </RadioGroup>
             </RelativeLayout>
@@ -160,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="15dp"
-                    android:text="LANGUAGE"
+                    android:text="@string/rewards_language"
                     android:textColor="@color/app_grey"
                     app:fontName="oswald_regular.ttf" />
 
@@ -289,7 +289,7 @@
                     android:id="@+id/textAreMother"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="DO YOU HAVE CHILDREN?"
+                    android:text="@string/rewards_have_children"
                     android:textColor="@color/app_grey"
                     app:fontName="oswald_regular.ttf" />
 
@@ -350,7 +350,7 @@
                     android:id="@+id/textViewNumberOfKids"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="NUMBER OF KIDS"
+                    android:text="@string/rewards_number_of_kids"
                     android:textColor="@color/app_grey"
                     app:fontName="oswald_regular.ttf" />
 
@@ -377,9 +377,9 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="5dp"
-                    android:visibility="gone"
                     android:layout_marginBottom="8dp"
-                    android:src="@drawable/arrowdownnew" />
+                    android:src="@drawable/arrowdownnew"
+                    android:visibility="gone" />
             </RelativeLayout>
 
             <LinearLayout
@@ -396,23 +396,23 @@
             <include
                 android:id="@+id/layoutDynamicNumberOfKids"
                 layout="@layout/dynamic_child_view"
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="15dp"/>
+                android:layout_marginRight="15dp" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/textAddChild"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:background="@color/app_red"
                 android:paddingLeft="35dp"
-                android:layout_gravity="center_horizontal"
                 android:paddingTop="10dp"
                 android:paddingRight="35dp"
                 android:paddingBottom="10dp"
-                android:text="ADD CHILD"
+                android:text="@string/rewards_add_child"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -427,7 +427,7 @@
                 android:gravity="center_vertical"
                 android:paddingEnd="15dp"
                 android:paddingRight="15dp"
-                android:text="ARE YOU EXPECTING?"
+                android:text="@string/rewards_are_expecing"
                 android:textColor="@color/app_grey"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/gender" />
@@ -456,8 +456,8 @@
                     android:layout_below="@+id/textViewLocation"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/mainprofile_thin_border"
-                    android:focusable="false"
                     android:editable="false"
+                    android:focusable="false"
                     android:hint="DD/MM/YYYY"
                     android:inputType="textNoSuggestions"
                     android:paddingStart="15dp"
@@ -491,7 +491,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="15dp"
-                    android:text="INTERESTS"
+                    android:text="@string/rewards_interest"
                     android:textColor="@color/app_grey"
                     app:fontName="oswald_regular.ttf" />
 
@@ -561,7 +561,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="15dp"
                 android:background="@color/app_red"
                 android:gravity="center"
                 android:paddingLeft="35dp"
@@ -571,6 +573,7 @@
                 android:text="@string/save_continue"
                 android:textColor="@color/white"
                 android:textSize="18sp"
+                android:layout_marginBottom="10dp"
                 android:textStyle="bold" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
