--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
@@ -63,12 +63,10 @@
 
                 <android.support.v7.widget.AppCompatSpinner
                     android:id="@+id/genderSpinner"
-                    android:layout_width="170dp"
+                    android:layout_width="150dp"
                     android:layout_height="40dp"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginLeft="0dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginRight="8dp"
+                    app:layout_constraintRight_toLeftOf="@+id/textDOB"
                     android:background="@drawable/mainprofile_thin_border"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -85,8 +83,10 @@
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/textDOB"
-                    android:layout_width="170dp"
+                    android:layout_width="150dp"
                     android:layout_height="40dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
                     android:layout_marginTop="7dp"
                     android:background="@drawable/mainprofile_thin_border"
                     android:gravity="center_vertical"
@@ -94,6 +94,7 @@
                     android:paddingLeft="10dp"
                     android:textColor="#000"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/genderSpinner"
                     app:layout_constraintTop_toBottomOf="@id/dobLabelTextView" />
             </android.support.constraint.ConstraintLayout>
 
