--- a/MyCity4Kids/MyCity4Kids/res/layout/challenge_discription_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/challenge_discription_layout.xml
@@ -30,10 +30,11 @@
 
                 <ImageView
                     android:id="@+id/infoImage"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
                     android:layout_gravity="center"
                     android:layout_marginLeft="12dp"
+                    android:layout_marginTop="1dp"
                     android:tint="@color/app_red"
                     app:srcCompat="@drawable/ic_info" />
 
@@ -42,7 +43,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="5dp"
                     android:text="DISCRIPTION"
                     android:textColor="@color/app_red"
                     android:textSize="20sp"
@@ -104,6 +105,7 @@
             android:text="@string/add"
             android:textColor="@color/white"
             android:textSize="18sp"
+            android:visibility="gone"
             app:fontName="oswald_regular.ttf" />
 
     </RelativeLayout>
