--- a/MyCity4Kids/MyCity4Kids/res/layout/parallel_feed_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/parallel_feed_activity.xml
@@ -7,7 +7,6 @@
         android:id="@+id/recyclerViewFeed"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#dedede"
-        android:dividerHeight="8dp" />
+        android:background="#dedede" />
 
 </android.support.constraint.ConstraintLayout>
