final release build 127

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
@@ -352,6 +352,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/rewards_number_of_kids"
+                    android:visibility="gone"
                     android:textColor="@color/app_grey"
                     app:fontName="oswald_regular.ttf" />
 
