videochallenge new ui is almost done

--- a/MyCity4Kids/MyCity4Kids/res/layout/horizontal_recycler_view_video_challenge.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/horizontal_recycler_view_video_challenge.xml
@@ -52,6 +52,17 @@
                 android:visibility="gone"
                 app:fontName="oswald.ttf" />
 
+            <ImageView
+                android:id="@+id/info"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_alignRight="@+id/tagImageView"
+                android:layout_margin="10dp"
+                android:background="@drawable/round_circle"
+                android:padding="3dp"
+                android:tint="@color/app_red"
+                app:srcCompat="@drawable/ic_info" />
+
 
         </RelativeLayout>
 
