--- a/MyCity4Kids/MyCity4Kids/res/layout/challenge_discription_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/challenge_discription_layout.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:paddingBottom="50dp">
+    android:clipToPadding="false">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -21,7 +20,8 @@
             android:layout_marginLeft="12dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="12dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -87,6 +87,16 @@
 
         </LinearLayout>
 
+
+        <WebView
+            android:id="@+id/videoChallengeRulesWebView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:autoLink="web"
+            android:background="@color/white_color"
+            android:ellipsize="end" />
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/submitStoryText"
