--- a/MyCity4Kids/MyCity4Kids/res/layout/exoplayer_challenge_player_view_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/exoplayer_challenge_player_view_activity.xml
@@ -35,9 +35,10 @@
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
+        android:id="@+id/main_media_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/id_toolbar">
+        android:layout_height="300dp"
+        android:background="#000000">
 
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/exoPlayerView"
