--- a/MyCity4Kids/MyCity4Kids/res/layout/article_detail_deleteme.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_detail_deleteme.xml
@@ -1,51 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/home_bg"
     android:clickable="true">
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ToolbarTheme"
+        app:titleTextAppearance="@style/ToolbarTheme.Title">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <RelativeLayout
+            android:id="@+id/toolbarRelativeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            app:theme="@style/ToolbarTheme"
-            app:titleTextAppearance="@style/ToolbarTheme.Title">
+            android:visibility="visible">
 
-            <RelativeLayout
-                android:id="@+id/toolbarRelativeLayout"
-                android:layout_width="match_parent"
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/toolbarTitleTextView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="visible">
+                android:layout_centerVertical="true"
+                android:text="@string/home_screen.select_an_option.title"
+                android:textColor="@color/home.toolbar.titlecolor"
+                android:textSize="20sp"
+                app:fontName="oswald_regular.ttf" />
 
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/toolbarTitleTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/home_screen.select_an_option.title"
-                    android:textColor="@color/home.toolbar.titlecolor"
-                    android:textSize="20sp"
-                    app:fontName="oswald_regular.ttf" />
-            </RelativeLayout>
-        </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
 
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:id="@+id/tabContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:layout_marginTop="?attr/actionBarSize">
+        android:layout_below="@+id/toolbar">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
@@ -67,8 +62,8 @@
         android:id="@+id/topLayerGuideLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/toolbar"
         android:layout_alignBottom="@+id/tabContainer"
+        android:layout_alignTop="@+id/toolbar"
         android:background="@color/dark_transparent"
         android:clickable="true"
         android:elevation="6dp"
@@ -77,11 +72,14 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
+        android:layout_marginBottom="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/tabContainer"
-        android:layout_marginBottom="100dp" />
+        android:layout_below="@id/tabContainer" />
+
 
     <include layout="@layout/rewards_bottom_sheet" />
+
+
 
 </android.support.design.widget.CoordinatorLayout>
