bottom sheet 10 sec logic and isreward added logic done

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
@@ -9,9 +9,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:layout_centerHorizontal="true">
 
         <ImageView
             android:id="@+id/imageView2"
@@ -41,7 +39,8 @@
             android:text="@string/rewards_description"
             android:layout_below="@+id/imageView2"
             android:textSize="14sp"
-            app:fontName="oswald_regular.ttf" />
+            android:layout_marginTop="10dp"
+            app:fontName="oswald.ttf" />
 
         <TextView
             android:id="@+id/text3"
