blogsetup space in biofield and strings of reward

--- a/MyCity4Kids/MyCity4Kids/res/layout/choose_video_category_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/choose_video_category_activity.xml
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:text="CHALLENGES"
+            android:text="@string/video_challenge_text"
             android:textColor="@color/greytxt_color"
             android:textSize="20sp"
             android:visibility="gone"
