bottom sheet dialog and logic added to private profile page

--- a/MyCity4Kids/MyCity4Kids/res/layout/private_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/private_profile_activity.xml
@@ -245,7 +245,7 @@
                 android:textColor="@color/app_light_black" />
 
             <LinearLayout
-                android:id="@+id/linearLayout"
+                android:id="@+id/linearRewardsHeader"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:layout_below="@+id/userbioTextView"
