--- a/MyCity4Kids/MyCity4Kids/res/layout/item_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/item_layout.xml
@@ -5,7 +5,7 @@
     android:id="@+id/video_cell"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/cool_grey">
+    android:background="@color/black">
 
     <RelativeLayout
         android:id="@+id/item_top_layout"
