--- a/MyCity4Kids/MyCity4Kids/res/layout/new_video_listing_detail.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_video_listing_detail.xml
@@ -202,6 +202,7 @@
         android:text="@string/add_article_or_video.upload_video"
         android:textColor="@color/white"
         android:textSize="17sp"
+        android:visibility="gone"
         app:fontName="oswald_regular.ttf" />
 
 
